--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -30,7 +30,7 @@ date_stop               2015-10-27T06:30:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %SITE OPTIONS
-radar_id_list           [66,50]   %'all' for all sites in site_info for realtime processing
+radar_id_list           [66]   %'all' for all sites in site_info for realtime processing
 force_transform_update  0         %flag to force transform regeneration
 %site description
 %overrides the zone setting
@@ -92,8 +92,10 @@ sd_plt_thin       8                    %thin integer for vectors
 %
 impact_radar_id   [8,19,66,72,73]
 impact_hrs        18
+impact_wind_lvl   [70,90]
 impact_tmp_root   /tmp/vis_impact_maps/
 impact_out_root   s3://roames-weather-vis/impact_maps/
+coast_ffn         /run/media/meso/DATA/mapping/AUS_boundary/STE11aAust.shp
 %
 % ERROR NOTIFICATION
 %
