bug fix in climate kml layer (frequency was 1 count smaller in imresize output)

--- a/rwx_climate/etc/climate.config
+++ b/rwx_climate/etc/climate.config
@@ -7,13 +7,13 @@
 %
 % Site
 %
-radar_id_list  66                                             %radar id for climate analysis. Set to 'all' to use radar_id of all folders in archive path
+radar_id_list  66                                              %radar id for climate analysis. Set to 'all' to use radar_id of all folders in archive path
 transform_new  0                                               %flag to force transform regeneration
 %
 % Temporal
 %
-date_start     2014_11_27                                      %start date (yyyy_mm_dd)
-date_stop      2014_11_27                                      %end date   (yyyy_mm_dd)
+date_start     2017_10_01                                      %start date (yyyy_mm_dd)
+date_stop      2017_10_31                                      %end date   (yyyy_mm_dd)
 time_min       00:00                                           %newest time in each dat to accept a cell (HH:MM)
 time_max       23:59                                           %oldest time in each day to accept a cell (HH:MM)
 month_list     [1,2,3,4,5,6,7,8,9,10,11,12]                    %list of month numbers (vec)
@@ -94,11 +94,11 @@ kml_transparent_flag    1
 %
 % Paths
 %
-db_root        /run/media/meso/data/rwx_clim_archive/          %local path to climate database root /run/media/meso/data/rwx_clim_archive/
-date_list_ffn  data/sb_data/arch_sb_days.mat                   %second date list to filter primary (must contain matlab dates rounded)
-out_root       /home/meso/rwx_climate/                         %output path for climate products
-old_root       /home/meso/rwx_climate/OLD/                     %output path for old climate products
+db_root        /home/meso/rwx_climate_database/                        %local path to climate database root /run/media/meso/data/rwx_clim_archive/
+date_list_ffn  data/sb_data/arch_sb_days.mat                          %second date list to filter primary (must contain matlab dates rounded)
+out_root       /home/meso/rwx_climate_output/                         %output path for climate products
+old_root       /home/meso/rwx_climate_output/OLD/                     %output path for old climate products
 coast_ffn      /run/media/meso/DATA/mapping/AUS_boundary/STE11aAust.shp
 topo_ffn       /run/media/meso/DATA/mapping/AUS_gtopo30
-s3_path        s3://roames-weather-vis/kml_climate/    %s3 path to stormh5 data
-url_prefix     https://s3-ap-southeast-2.amazonaws.com/roames-weather-vis/kml_climate/
+s3_path        s3://roames-weather-vis/kml_climate_temp/    %s3 path to stormh5 data
+url_prefix     https://s3-ap-southeast-2.amazonaws.com/roames-weather-vis/kml_climate_temp/
