--- a/rwx_climate/etc/sync.config
+++ b/rwx_climate/etc/sync.config
@@ -3,11 +3,12 @@
 %sync_database.m config file
 %
 %---------------------------------------------------------
-radar_id_list [66]            %radar id list for database sync, use 'all' to use site_info.txt list
+radar_id_list [66]                                            %radar id list for database sync, use 'all' to use site_info.txt list
 storm_s3      s3://roames-weather-stormh5/stormh5_archive/    %s3 path to stormh5 data
 storm_ddb     wxradar_stormh5_index                           %ddb name for storm cell data
-db_root       /run/media/meso/data/rwx_clim_archive/          %local path to climate database root
+db_root       /home/meso/rwx_climate_database/                %local path to climate database root
 ddb_fields    29                                              %number of fields in ddb (QC)
 resync_h5     1                                               %resync h5 
 rebuild_ddb   0                                               %if set to '1', delete csv before ddb transfer
+sync_year     2017                                            %single year to sync, or set to all
 
