--- a/rwx_climate/etc/map/map.50.config
+++ b/rwx_climate/etc/map/map.50.config
@@ -7,20 +7,20 @@
 %
 % image map layout config
 %
-map_N_lat               -26.71
-map_S_lat               -28.5
+map_N_lat               -26.25
+map_S_lat               -29
 map_E_lon               153.6   
-map_W_lon               151.54
+map_W_lon               151
 %
 % image layers
 %
 state_id                [1,3]
 %
 draw_cities             1
-cities_names            {'Brisbane','Esk','Boonah'}
-cities_lat              [-27.46,-27.25,-28]
-cities_lon              [153.02,152.42,152.7]
-cities_horz_align       {'right','right','right'}
-cities_vert_align       {'top','top','top'}
-cities_fontsize         [10,10,10]
-cities_marksize         [3,3,3]
+cities_names            {'Brisbane','Esk','Boonah','Oakey','Millmerran'}
+cities_lat              [-27.46,-27.25,-28,-27.431,-27.86]
+cities_lon              [153.02,152.42,152.7,151.718,151.26]
+cities_horz_align       {'right','right','right','right','right'}
+cities_vert_align       {'top','top','top','top','top'}
+cities_fontsize         [10,10,10,10,10]
+cities_marksize         [3,3,3,3,3]
