fixed bug in single dop codes

--- a/rwx_vis/etc/vis.config
+++ b/rwx_vis/etc/vis.config
@@ -3,9 +3,9 @@
 %
 % DESTINATION OPTIONS
 local_dest_flag          1
-local_dest_root          /home/meso/roames_weather_kml/kml_map_20171029/
-s3_dest_root             s3://roames-weather-vis/kml_map_20171029/
-s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-weather-vis/kml_map_20171026/
+local_dest_root          /home/meso/roames_weather_kml/kml_map_20180211/
+s3_dest_root             s3://roames-weather-vis/kml_map_20180211/
+s3_public_root           https://s3-ap-southeast-2.amazonaws.com/roames-weather-vis/kml_map_20180211/
 %
 % REALTIME OPTIONS
 realtime_flag            0
@@ -24,9 +24,9 @@ download_path            /tmp/vis_h5_download/
 asset_data_fn            tmp/asset_data.mat
 %
 % HISTORICAL OPTIOS
-date_start              2017-10-29T04:00:00
+date_start              2018-02-11T07:00:00
 %yyyy_mm_ddTHH:MM : oldest time to process
-date_stop               2017-10-29T07:00:00
+date_stop               2018-02-11T09:00:00
 %yyyy_mm_ddTHH:MM : newest time to process
 %
 %SITE OPTIONS
@@ -66,7 +66,7 @@ min_track_cells       3                 %minimum of unique cells for kml track g
 %
 % KML LAYER OPTIONS
 %                      1 2 3 4 5 6 7 8 9
-options               [0,0,0,0,0,1,1,0,0]
+options               [1,0,0,0,0,1,1,0,1]
 %description (T/F):
 %Entry (1)  PPI refl kml layer
 %Entry (2)  PPI vel kml layer
@@ -90,12 +90,12 @@ sd_plt_thin       8                    %thin integer for vectors
 %
 % Impact maps
 %
-impact_flag       0
-impact_radar_id   [8,19,66,72,73]
+impact_flag       1
+impact_radar_id   [66]
 impact_hrs        18
 impact_wind_lvl   [70,90]
 impact_tmp_root   /tmp/vis_impact_maps/
-impact_out_root   s3://roames-weather-vis/impact_maps/
+impact_out_root   /home/meso/roames_weather_kml/impact_maps/
 coast_ffn         /run/media/meso/DATA/mapping/AUS_boundary/STE11aAust.shp
 %
 % ERROR NOTIFICATION
