added new video res results

--- a/opt/qc_odimh5/etc/qc.config
+++ b/opt/qc_odimh5/etc/qc.config
@@ -1,9 +1,9 @@
 %qc_odimh5 CONFIG FILE
 %
 %
-year_start                2014
-year_stop                 2014
-radar_id_list             [28]              %can use 'all' for a list of 1:99
+year_start                2018
+year_stop                 2018
+radar_id_list             [99]              %can use 'all' for a list of 1:99
 empty_vol_size            5000              %bytes, 5kB
 thresh_vol_size           100000            %bytes, 100kB
 s3_odimh5_root            s3://roames-weather-odimh5/odimh5_archive/
@@ -13,4 +13,5 @@ remove_cappi              0
 nowcasting_rename_flag    0
 timestamp_rename_flag     0
 duplicate_flag            0
-vol_count_flag            1
+vol_log_flag              1
+vol_log_video_flag        1
