added mat output to climate for report checking

--- a/rwx_climate/etc/map/map.69.config
+++ b/rwx_climate/etc/map/map.69.config
@@ -20,7 +20,7 @@ draw_cities             1
 cities_names            {'Narrabri','Coonabarabran','Tamworth'}
 cities_lat              [-30.32,-31.25,-31.083]
 cities_lon              [149.76,149.26,150.92]
-cities_horz_align       {'right','right','right'}
+cities_horz_align       {'right','left','right'}
 cities_vert_align       {'top','top','top'}
 cities_fontsize         [10,10,10]
 cities_marksize         [3,3,3]
